--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "twitchat.work",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://twitchat.work",
   "dependencies": {
     "@pagedip/util-react-resolver": "^1.1.2",
     "@types/classnames": "^2.2.7",
@@ -11,6 +12,7 @@
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "immer": "^2.1.4",
     "little-loader": "^0.2.0",
     "lodash": "^4.17.11",
@@ -25,7 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
