--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -22,6 +22,12 @@
         "singleQuote": true,
         "printWidth": 120
       }
+    },
+    {
+      "files": ["*.html"],
+      "options": {
+        "printWidth": false
+      }
     }
   ]
 }
